OpenAPI fix
* OpenAPIResponse return right content type
* openapi-core update
